--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@ Homestead.json
 Homestead.yaml
 npm-debug.log
 yarn-error.log
-/_ide_helper.php
+/_ide_helper*.php
 /public/css
 /public/fonts
 /public/js
