--- a/composer.json
+++ b/composer.json
@@ -9,12 +9,14 @@
     "license": "MIT",
     "require": {
         "php": "^7.2.5",
+        "cviebrock/eloquent-sluggable": "^7.0",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.24",
         "laravel/tinker": "^2.0",
-        "laravel/ui": "^2.1"
+        "laravel/ui": "^2.1",
+        "spatie/eloquent-sortable": "^3.8"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.8",
