--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "spatie/eloquent-sortable": "^3.8"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.4",
         "barryvdh/laravel-ide-helper": "^2.8",
         "facade/ignition": "^2.0",
         "fzaninotto/faker": "^1.9.1",
